apps/oxlint/src/snapshots/fixtures__nested_config_-A no-console@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -A no-console
working directory: fixtures/nested_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 87 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
