apps/oxlint/src/snapshots/fixtures__output_formatter_diagnostic_--format=checkstyle parser-error.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=checkstyle parser-error.js
working directory: fixtures/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="utf-8"?><checkstyle version="4.3"><file name="parser-error.js"><error line="3" column="9" severity="error" message="Expected `;` but found `:`" source="" /></file></checkstyle>
----------
CLI result: LintFoundErrors
----------
